--- a/coral-rescue.html
+++ b/coral-rescue.html
@@ -230,8 +230,8 @@
       </div>
       <!-- method finish -->
 
-      <div class="row-flex full-width thick-padding" style="padding-bottom:0;">
-        <h5 class="mid-padding" style="padding-bottom:0;">Illustration Creation</h5>
+      <div class="row-flex full-width thick-padding" style="padding-top:0;padding-bottom:0;">
+        <h5 class="thing-padding" style="padding-top:0;padding-bottom:0;">Illustration Creation</h5>
       </div>
       
       <!-- illustration bits start -->
@@ -249,8 +249,8 @@
       </div>
       <!-- illustrationblurb finish -->
 
-      <div class="row-flex full-width thick-padding" style="padding-bottom:0;">
-        <h5 class="mid-padding" style="padding-bottom:0;">Colour</h5>
+      <div class="row-flex full-width thick-padding" style="padding-top:0;padding-bottom:0;">
+        <h5 class="thin-padding" style="padding-top:0;padding-bottom:0;">Colour</h5>
       </div>
 
       <!-- colourtests start -->
@@ -291,6 +291,10 @@
         </div>
       </div>
       <!-- colour scenes finish -->
+
+      <div class="row-flex full-width thick-padding" style="padding-top:0;padding-bottom:0;">
+        <h5 class="thin-padding">Final Outcome</h5>
+      </div>
 
       <video class="full-width" src="videos/cr-v-1.mkv" muted autoplay loop></video>
 
