--- a/nautiqua.html
+++ b/nautiqua.html
@@ -319,8 +319,8 @@
       </div>
       <!-- audience finish -->
 
-      <div class="row-flex full-width thick-padding" style="padding-bottom:0;">
-        <h5 class="mid-padding" style="padding-bottom:0;">Ideation</h5>
+      <div class="row-flex full-width thick-padding" style="padding-top:0;padding-bottom:0;">
+        <h5 class="thin-padding" style="padding-top:0;padding-bottom:0;">Ideation</h5>
       </div>
 
       <!-- sketches start -->
@@ -330,7 +330,7 @@
       <!-- sketches finish -->
 
       <div class="row-flex full-width thick-padding" style="padding-bottom:0;">
-        <h5 class="mid-padding" style="padding-bottom:0;">Concept Development</h5>
+        <h5 class="thin-padding" style="padding-top:0;padding-bottom:0;">Concept Development</h5>
       </div>
 
       <!-- sketches start -->
@@ -340,7 +340,7 @@
       <!-- sketches finish -->
 
       <div class="row-flex full-width thick-padding" style="padding-bottom:0;">
-        <h5 class="mid-padding" style="padding-bottom:0;">Final Outcome</h5>
+        <h5 class="thing-padding" style="padding-top:0;padding-bottom:0;">Final Outcome</h5>
       </div>
 
       <!-- product start -->
