--- a/about.html
+++ b/about.html
@@ -139,10 +139,10 @@
           </div>
           <div class="full-width section-inner">
             <h4 class="section-item">Who am I?</h4>
-            <h3 class="section-item">Kind of obsessed with all things digital</h3>
-            <p class="section-item">I’m a Christchurch-based UX/UI designer who enjoys exploring what can be achieved in the ever-evolving world of tech. Each design project is a chance to learn and try something new in the digital space; this is something I will never grow tired of.</p>
-            <h3 class="section-item" style="margin-top:20px;">I thrive on immersion</h3>
-            <p class="section-item">Whether it’s getting myself lost in books and films, or indulging in my love for handmade craft, calligraphy, and ballpoint pen drawing; I love allowing myself to drown head-to-toe in these experiences. This all-encompassing immersion extends to my work in UX/UI, where I find myself approaching each project with fresh enthusiasm and a single-minded focus until the vision is brought to life.</p>
+            <h3 class="section-item">Kind of obsessed.... but not in a bad way</h3>
+            <p class="section-item">I’m a Christchurch-based UX/UI designer who enjoys learning and creating things to the point of it being (mildly) concerning. I thrive on variety + challenges, which means I love going beyond my discipline to combine all sorts of mediums, tools & experiences in my work—and that often involves learning new skills, too.</p>
+            <h3 class="section-item" style="margin-top:20px;">Always a UX/UI designer at my core</h3>
+            <p class="section-item">Despite my many interests in the creative space (drawing, painting, animation, 3D, handcraft, etc...) I still seem to enjoy UX/UI design the most. Specifically, creating work that addresses legitimate problems, and not just purely aesthetically or technically impressive. That being said, the projects I tend to enjoy the most are those that have that opportunity to pull from other skillsets.</p>
           </div>
         </section>
         <!-- about finish -->
@@ -170,6 +170,59 @@
 
         </section>
         <!-- values finish -->
+
+
+        <!-- whatcanido start -->
+        <section class="">
+
+          <div style="padding: 30px 30px 0;margin-bottom:-25px;">
+            <h4 class="section-item">What can I do?</h4>
+          </div>
+          <div class="row-flex section-inner">
+            <div class="one-third-width">
+              <h3 class="section-item">Hard Skills</h3>
+              <p class="section-item">
+                <ul>
+                  <li>UI Prototyping</li>
+                  <li>Usability testing / user research</li>
+                  <li>Web development (HTML/CSS/JS)</li>
+                  <li>Digital illustration</li>
+                  <li>Traditional drawing/painting</li>
+                  <li>3D modelling</li>
+                </ul>
+              </p>
+            </div>
+            <div class="one-third-width">
+              <h3 class="section-item">Soft Skills</h3>
+              <p class="section-item">
+                <ul>
+                  <li>Communication</li>
+                  <li>Collaboration</li>
+                  <li>Time management</li>
+                  <li>Design thinking</li>
+                  <li>Problem solving</li>
+                  <li>Empathy</li>
+                  <li>A willingness to learn</li>
+                </ul>
+              </p>
+            </div>
+            <div class="one-third-width">
+              <h3 class="section-item">Tools</h3>
+              <p class="section-item">
+                <ul>
+                  <li>Adobe Suite</li>
+                  <li>Figma</li>
+                  <li>Visual Studio Code</li>
+                  <li>Blender</li>
+                  <li>Pen & paper!</li>
+                </ul>
+              </p>
+            </div>
+          </div>
+
+        </section>
+        <!-- whatcanido finish -->
+
 
     </div>
     <!-- sections finish -->
