--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
             <h3 class="section-item">Kind of obsessed.... but not in a bad way</h3>
             <p class="section-item">I’m a Christchurch-based UX/UI designer who enjoys learning and creating things to the point of it being (mildly) concerning. I thrive on variety + challenges, which means I love going beyond my discipline to combine all sorts of mediums, tools & experiences in my work—and that often involves learning new skills, too.</p>
             <h3 class="section-item" style="margin-top:20px;">Always a UX/UI designer at my core</h3>
-            <p class="section-item">Despite my many interests in the creative space (drawing, painting, animation, 3D, handcraft, etc...) I still seem to enjoy UX/UI design the most. Specifically, creating work that addresses legitimate problems, and not just purely aesthetically or technically impressive. That being said, the projects I tend to enjoy the most are those that have that opportunity to pull from other skillsets.</p>
+            <p class="section-item">Despite my many interests in the creative space (drawing, painting, animation, 3D, handcraft, etc...) I still seem to enjoy UX/UI design the most. Specifically, creating work that addresses legitimate problems, and not just purely aesthetically or technically impressive. That being said, the projects I tend to love the most are those that have that opportunity to pull from other skillsets or explore unknown territory.</p>
           </div>
         </section>
         <!-- about finish -->
