--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
             <div class="one-third-width">
               <h3 class="section-item">Hard Skills</h3>
               <p class="section-item">
-                <ul>
+                <ul class="skills-list">
                   <li>UI Prototyping</li>
                   <li>Usability testing / user research</li>
                   <li>Web development (HTML/CSS/JS)</li>
@@ -195,7 +195,7 @@
             <div class="one-third-width">
               <h3 class="section-item">Soft Skills</h3>
               <p class="section-item">
-                <ul>
+                <ul class="skills-list">
                   <li>Communication</li>
                   <li>Collaboration</li>
                   <li>Time management</li>
@@ -209,7 +209,7 @@
             <div class="one-third-width">
               <h3 class="section-item">Tools</h3>
               <p class="section-item">
-                <ul>
+                <ul class="skills-list">
                   <li>Adobe Suite</li>
                   <li>Figma</li>
                   <li>Visual Studio Code</li>
