--- a/her-legend.html
+++ b/her-legend.html
@@ -221,6 +221,7 @@
         <div class="two-third-width mid-padding bigger-body">
           <p class="thin-padding">The brief: create anticipation for the Black Ferns playing in the 2025 Rugby World Cup by celebrating their successes in a promotional campaign, including an interactive timeline of the Black Ferns and their inspiring athletic journeys.</p>
           <p class="thin-padding">Our solution: a scrollytelling timeline that takes the user through the inspiring journey of the Black Ferns history and achievements. This incorporates a polyvocal narrative to allow people to connect with the team on a human level through the diverse range of multiple different perspectives and experiences.</p>
+          <p class="thin-padding"><a href="#her-legend-report">Jump down to see the project process here!</a></p>
         </div>
       </div>
       <!-- intro finish -->
@@ -239,6 +240,8 @@
       <div class="full-width thin-padding">&nbsp;</div>
       
       <div style="padding:64.88% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/962092753?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Her Legend // Timeline Walkthrough"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+      <iframe id="her-legend-report" allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe mid-top" src="https://heyzine.com/flip-book/d9a3b4ef40.html" style="border: 1px solid lightgray; width: 100%; height: 600px;"></iframe>
 
        <!-- references start -->
       <div class="full-width row-flex thick-padding">
