--- a/coral-rescue.html
+++ b/coral-rescue.html
@@ -398,6 +398,11 @@
             </a>
           </div>
           <div class="one-quarter-width thin-padding">
+            <a class="extra-content-item" href="little-night-helpers.html">
+              <img class="full-width" src="images/little-night-helpers/thumbnail.jpg" alt="">
+            </a>
+          </div>
+          <div class="one-quarter-width thin-padding">
             <a class="extra-content-item" href="pasc.html">
               <img class="full-width" src="images/pasc/pasc-home-mockup.png" alt="">
             </a>
