--- a/index.html
+++ b/index.html
@@ -178,6 +178,28 @@
         </section>
         <!-- nautiqua finish -->
 
+        <!-- littlenighthelpers start -->
+        <section class="row-flex">
+          <div id="bg-little-night-helpers-case-study" class="three-fifth-width">
+          </div>
+          <div class="two-fifth-width section-inner">
+            <h4 class="section-item">2024</h4>
+            <h3 class="section-item">Little Night Helpers</h3>
+            <hr>
+            <p class="section-item">Explores how a subject that causes discomfort and disinterest can instead spark curiosity.</p>
+            <div class="section-item project-tags">
+              <div class="project-tag">Illustration</div>
+              <div class="project-tag">Web Design</div>
+            </div>
+            <div class="section-item">
+              <a href="little-night-helpers.html">
+                <button class="case-study-btn">view case study</button>
+              </a>
+            </div>
+          </div>
+        </section>
+        <!-- littlenighthelpers finish -->
+
         <!-- coral rescue start -->
         <section class="row-flex">
           <div id="bg-coral-rescue-case-study" class="three-fifth-width">
