--- a/nautiqua.html
+++ b/nautiqua.html
@@ -168,10 +168,10 @@
             <div class="project-tags thin-padding">
               <div class="project-tag"><i class="fa-brands fa-figma"></i> Figma</div>
               <div class="project-tag">
-                <img class="tool-icon" src="images/photoshop-icon-nautiqua.svg" alt=""> Photoshop
+                <img class="tool-icon" src="images/nautiqua/photoshop-icon-nautiqua.svg" alt=""> Photoshop
               </div>
               <div class="project-tag">
-                <img class="tool-icon" src="images/blender-icon-nautiqua.svg" alt="">Blender
+                <img class="tool-icon" src="images/nautiqua/blender-icon-nautiqua.svg" alt="">Blender
               </div>
             </div>
           </div>
@@ -446,6 +446,11 @@
           <div class="one-quarter-width thin-padding">
             <a class="extra-content-item" href="her-legend.html">
               <img class="full-width" src="images/her-legend/her-legend-thumbnail.png" alt="">
+            </a>
+          </div>
+          <div class="one-quarter-width thin-padding">
+            <a class="extra-content-item" href="little-night-helpers.html">
+              <img class="full-width" src="images/little-night-helpers/thumbnail.jpg" alt="">
             </a>
           </div>
           <div class="one-quarter-width thin-padding">
