--- a/pasc.html
+++ b/pasc.html
@@ -368,6 +368,11 @@
             </a>
           </div>
           <div class="one-quarter-width thin-padding">
+            <a class="extra-content-item" href="little-night-helpers.html">
+              <img class="full-width" src="images/little-night-helpers/thumbnail.jpg" alt="">
+            </a>
+          </div>
+          <div class="one-quarter-width thin-padding">
             <a class="extra-content-item" href="coral-rescue.html">
               <img class="full-width" src="images/coral-rescue/coral-rescue-thumbnail.png" alt="">
             </a>
