--- a/about.html
+++ b/about.html
@@ -139,10 +139,10 @@
           </div>
           <div class="full-width section-inner">
             <h4 class="section-item">Who am I?</h4>
-            <h3 class="section-item">Kind of obsessed.... but not in a bad way</h3>
-            <p class="section-item">I’m a Christchurch-based UX/UI designer who enjoys learning and creating things to the point of it being (mildly) concerning. I thrive on variety + challenges, which means I love going beyond my discipline to combine all sorts of mediums, tools & experiences in my work—and that often involves learning new skills, too.</p>
-            <h3 class="section-item" style="margin-top:20px;">Always a UX/UI designer at my core</h3>
-            <p class="section-item">Despite my many interests in the creative space (drawing, painting, animation, 3D, handcraft, etc...) I still seem to enjoy UX/UI design the most. Specifically, creating work that addresses legitimate problems, and not just purely aesthetically or technically impressive. That being said, the projects I tend to love the most are those that have that opportunity to pull from other skillsets or explore unknown territory.</p>
+            <h3 class="section-item">A learner at heart</h3>
+            <p class="section-item">I’m a Christchurch-based digital designer who enjoys learning and creating things. I thrive on variety + challenges, which means I love going beyond my existing skill-set to combine all sorts of mediums, tools & experiences in my work—and that often involves learning new skills, too.</p>
+            <h3 class="section-item" style="margin-top:20px;">Designing to address problems</h3>
+            <p class="section-item">Though my strengths lie in UX/UI design, I also have a strong foundation in traditionally physical mediums (drawing, painting, handcraft) and I'm always willing to explore other fields, especially those that may work better to solve the unique problem(s) within a given brief. As much as I like designing websites and apps, some design problems need other solutions, and I enjoy creating those just as much!</p>
           </div>
         </section>
         <!-- about finish -->
@@ -180,7 +180,7 @@
           </div>
           <div class="row-flex section-inner">
             <div class="one-third-width">
-              <h3 class="section-item">Hard Skills</h3>
+              <h3 class="section-item">Technical Skills</h3>
               <p class="section-item">
                 <ul class="skills-list">
                   <li>UI Prototyping</li>
@@ -214,7 +214,7 @@
                   <li>Figma</li>
                   <li>Visual Studio Code</li>
                   <li>Blender</li>
-                  <li>Pen & paper!</li>
+                  <li>Pen & paper</li>
                 </ul>
               </p>
             </div>
