--- a/her-legend.html
+++ b/her-legend.html
@@ -225,31 +225,103 @@
           <h6 class="thin-padding">An interactive timeline of the Black Ferns' story</h6>
         </div>
         <div class="two-third-width mid-padding bigger-body">
-          <p class="thin-padding">The brief: create anticipation for the Black Ferns playing in the 2025 Rugby World Cup by celebrating their successes in a promotional campaign, including an interactive timeline of the Black Ferns and their inspiring athletic journeys.</p>
-          <p class="thin-padding">Our solution: a scrollytelling timeline that takes the user through the inspiring journey of the Black Ferns history and achievements. This incorporates a polyvocal narrative to allow people to connect with the team on a human level through the diverse range of multiple different perspectives and experiences.</p>
-          <p class="thin-padding"><a href="#her-legend-report" style="color:#5935c2;"><u>Jump down to see the project process here!</u></a></p>
+          <p class="thin-padding"><b>The brief:</b> create anticipation for the Black Ferns playing in the 2025 Rugby World Cup by celebrating their successes in a promotional campaign, including an interactive timeline of the Black Ferns and their inspiring athletic journeys.</p>
+          <p class="thin-padding"><b>Our solution:</b> a scrollytelling timeline that takes the user through the inspiring journey of the Black Ferns history and achievements. This incorporates a polyvocal narrative to allow people to connect with the team on a human level through the diverse range of multiple different perspectives and experiences.</p>
         </div>
       </div>
       <!-- intro finish -->
 
-      <!-- images start -->
-      <div class="full-width mid-top">
-        <img class="full-width" src="images/her-legend/hl-3.png" alt="">
-        <img class="full-width small-top" src="images/her-legend/hl-4.png" alt="">
-        <img class="full-width small-top" src="images/her-legend/hl-5.png" alt="">
-        <img class="full-width small-top" src="images/her-legend/hl-6.png" alt="">
-        <img class="full-width small-top" src="images/her-legend/hl-7.png" alt="">
-        <img class="full-width small-top" src="images/her-legend/hl-8.png" alt="">
+      <div class="row-flex full-width thick-padding" style="padding-top:0;padding-bottom:0;">
+        <h5 class="thin-padding" style="padding-top:0;padding-bottom:0;">Process</h5>
       </div>
-      <!-- images finish -->
+
+      <!-- methodology start -->
+      <div id="her-legend-methodology" class="mid-top full-width thick-padding">
+        <img class="full-width thick-padding" src="images/her-legend/bg-2.svg" alt="">
+      </div>
+      <!-- methodology finish -->
+
+      <div class="row-flex mid-padding">
+
+        <div class="img-wrapper two-fifth-width">
+          <img class="full-width rounded-img" src="images/her-legend/bg-3.png" alt="">
+          <p class="citation thin-padding">*Initial concept featuring separate story journeys.</p>
+        </div>
+
+        <div class="img-wrapper three-fifth-width mid-padding">
+            <h6 class="thin-padding">How Stories Converge</h6>
+            <p class="thin-padding bigger-body">
+              In our initial ideation phase, we explored the possibility of presenting a polyvocal narrative through multiple individual stories, but found that this would be repetitive and tedious, as well as less immersive from the user side.
+            </p>
+            <p class="thin-padding bigger-body">
+              Our new approach involved taking the user through a mostly chronological timeline, with different perspectives interwoven between major events to create an overall polyvocal narrative. This required extensive research, planning and storyboarding before moving onto the prototyping phase.
+            </p>
+        </div>
+
+      </div>
+
+      <!-- wip start -->
+      <div class="full-width mid-padding">
+        <img class="full-width" src="images/her-legend/bg-4.png" alt="">
+      </div>
+      <!-- wip finish -->
+
+      <!-- flipbook start -->
+      <div class="two-third-width thick-padding" style="margin: 0 auto;">
+        <p class="bigger-body thin-padding">
+          Rather than simply present the user with information, we opted to use scrollytelling alongside other interactive elements to take the user on a journey that engages them directly. The stories unfold while the user scrolls and takes them through multiple events from multiple perspectives with sound and music to create an immersive sensory experience.
+        </p>
+        <p class="bigger-body thin-padding">
+          For a more comprehensive look into my process for this project, have a flip through here:
+        </p>
+      </div>
+
+      <iframe id="her-legend-report" allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe mid-top" src="https://heyzine.com/flip-book/d9a3b4ef40.html" style="border: 1px solid lightgray; width: 100%; height: 600px;"></iframe>
+      <!-- flipbook finish -->
+
+      <!-- blurb start -->
+      <div class="two-third-width thick-padding" style="margin: 0 auto;">
+        <p class="bigger-body thin-padding">
+          We used the motif of a fern that unravels as the user navigates through the timeline to create a sense of progress and connect this experience clearly with the Black Ferns. This represents the progress made both by the Black Ferns and within women’s rugby over time.
+        </p>
+        <p class="bigger-body thin-padding">
+          Frame by frame animation was then used to create this effect.
+        </p>
+      </div>
+      <!-- blurb finish -->
+
+      <!-- animation start -->
+      <div class="row-flex full-width thick-padding" style="padding-top:0;padding-bottom:0;">
+        <h5 class="thin-padding" style="padding-top:0;padding-bottom:0;">Animation</h5>
+      </div>
+
+      <img class="full-width small-top" src="images/her-legend/bg-5-fern-frames.png">
+
+      <video class="full-width small-top" src="videos/fern-animation.mp4" muted autoplay loop></video>
+      <!-- animation finish -->
+
+      <div class="full-width mid-padding">&nbsp;</div>
+
+      <div class="row-flex full-width thick-padding" style="padding-top:0;padding-bottom:0;">
+        <h5 class="thin-padding" style="padding-top:0;padding-bottom:0;">Final Outcome</h5>
+      </div>
 
       <div class="full-width thin-padding">&nbsp;</div>
       
+      <!-- clips start -->
+      <div id="her-legend-clips" class="row-flex full-width thick-padding">
+        <video class="half-width thin-padding" src="videos/her-legend-clip-1-merged.mp4" muted autoplay loop></video>
+        <video class="half-width thin-padding" src="videos/her-legend-clip-3.mp4" muted autoplay loop></video>
+      </div>
+      <!-- clips finish -->
+
+      <img class="full-width mid-top" src="images/her-legend/bg-6.png">
+
+      <div class="full-width thin-padding">&nbsp;</div>
+
       <div style="padding:64.88% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/962092753?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Her Legend // Timeline Walkthrough"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
-      <iframe id="her-legend-report" allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe mid-top" src="https://heyzine.com/flip-book/d9a3b4ef40.html" style="border: 1px solid lightgray; width: 100%; height: 600px;"></iframe>
-
-       <!-- references start -->
+       <!-- references start
       <div class="full-width row-flex thick-padding">
         <div class="one-quarter-width thin-padding">
           <h3>References</h3>
@@ -261,7 +333,7 @@
           <p class="thin-padding"></p>
         </div>
       </div>
-      <!-- references finish -->
+references finish -->
 
       <!-- youmayalsolike start -->
       <div class="full-width thick-padding extra-content">
