--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             <hr>
             <p class="section-item">Celebrating the journey of the Black Ferns through an interactive polyvocal timeline.</p>
             <div class="section-item project-tags">
-              <div class="project-tag">Experience Design</div>
-              <div class="project-tag">UI Design</div>
+              <div class="project-tag">UX / UI Design</div>
+              <div class="project-tag">Animation</div>
             </div>
             <div class="section-item">
               <a href="her-legend.html">
