--- a/her-legend.html
+++ b/her-legend.html
@@ -347,7 +347,7 @@ references finish -->
           </div>
           <div class="one-quarter-width thin-padding">
             <a class="extra-content-item" href="little-night-helpers.html">
-              <img class="full-width" src="images/little-night-helpers/thumbnail.jpg" alt="">
+              <img class="full-width" src="images/little-night-helpers/thumbnail2.png" alt="">
             </a>
           </div>
           <div class="one-quarter-width thin-padding">
@@ -375,7 +375,7 @@ references finish -->
 
       <h2>Drop me a line</h2>
       <div class="footer-flex">
-        <p>+64 22 126 8697</p>
+        <p class="white-text">+64 22 126 8697</p>
         <p>wonara.nz@gmail.com</p>
         <div class="social-icons">
           <a href="https://www.instagram.com/nara_won" target="_blank">
@@ -389,7 +389,7 @@ references finish -->
       </div>
 
       <div class="copyright">
-        <p>&copy; 2024 Nara Won</p>
+        <p>&copy; 2025 Nara Won</p>
       </div>
 
     </footer>
