--- a/nautiqua.html
+++ b/nautiqua.html
@@ -450,7 +450,7 @@
           </div>
           <div class="one-quarter-width thin-padding">
             <a class="extra-content-item" href="little-night-helpers.html">
-              <img class="full-width" src="images/little-night-helpers/thumbnail.jpg" alt="">
+              <img class="full-width" src="images/little-night-helpers/thumbnail2.png" alt="">
             </a>
           </div>
           <div class="one-quarter-width thin-padding">
@@ -492,7 +492,7 @@
       </div>
 
       <div class="copyright">
-        <p>&copy; 2024 Nara Won</p>
+        <p>&copy; 2025 Nara Won</p>
       </div>
 
     </footer>
